# ImageReconstruction

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: render_markdown_pdf.py
src/recon_project/: __init__.py  aggregate_runs.py  ct_ops.py  ct_phantom.py  evaluate.py  evaluate_fbp.py  generate_data.py  make_quality_card.py  metrics.py  model.py  plot_ablation.py  train.py  visualize.py
