[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-view-ct-reconstruction"
version = "0.1.0"
description = "Physics-aware sparse-view CT reconstruction prototype with classical and learned baselines."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "scikit-image>=0.21",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
train = ["torch>=2.1"]

[tool.setuptools.packages.find]
where = ["src"]
